fix: published time sort format: have a map more square on mobile

--- a/static/input.css
+++ b/static/input.css
@@ -416,12 +416,20 @@ body:has(.lg-container:not([class~="lg-inline"])) .mobile-topbar-custom {
         height: 10vh;
     }
 
+    .ar-lt-0\.8\:h-\[30vh\] {
+        height: 30vh;
+    }
+
     .ar-lt-0\.8\:h-\[90vh\] {
         height: 90vh;
     }
 
     .ar-lt-0\.8\:w-\[8vh\] {
         width: 8vh;
+    }
+
+    .ar-lt-0\.8\:w-\[80\%\] {
+        width: 80%;
     }
 
     .ar-lt-0\.8\:w-\[90vw\] {
